[gd_scene load_steps=8 format=3 uid="uid://b2yb2ffgq8gub"]

[ext_resource type="Script" path="res://scenes/projectiles/crystal_projectile.gd" id="1_i07fs"]
[ext_resource type="PrismMesh" uid="uid://c5x02ui4xuaqn" path="res://assets/3d/my/crystal_mesh.tres" id="1_mw1na"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4k6pj"]
resource_local_to_scene = true
radius = 0.15

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t0fni"]
gravity = Vector3(0, -1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vwjab"]
shading_mode = 0
albedo_color = Color(2, 2, 2, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_arrt6"]
lightmap_size_hint = Vector2i(2, 2)
material = SubResource("StandardMaterial3D_vwjab")
size = Vector2(0.03, 0.03)
orientation = 2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r8agw"]
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
spread = 0.0
radial_velocity_min = 0.999978
radial_velocity_max = 4.99998
gravity = Vector3(0, 0, 0)
radial_accel_min = 5.0
radial_accel_max = 10.0
scale_min = 0.15
scale_max = 0.5

[node name="CrystalProjectile" type="Node3D"]
script = ExtResource("1_i07fs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_mw1na")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
collision_layer = 4
collision_mask = 3
gravity_space_override = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("SphereShape3D_4k6pj")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="GravityBitch" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ProjectileParticles" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 10
transform_align = 3
process_material = SubResource("ParticleProcessMaterial_t0fni")
draw_pass_1 = SubResource("PlaneMesh_arrt6")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
light_color = Color(1, 1, 0.654902, 1)
omni_range = 1.0
omni_shadow_mode = 0

[node name="CollisionParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 50
lifetime = 0.4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_r8agw")
draw_pass_1 = ExtResource("1_mw1na")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="GravityBitch" to="." method="_on_gravity_bitch_timeout"]
